# modeling-simulation-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  draw.py  main.py  package-lock.json  package.json  pyproject.toml  test_fm.py
analysis/: calculate_performance.py  generate_plots.py  generate_report.py  generate_validation_comparison.py
model/: __init__.py  actsys.md  actsys.py  config.py  ctrlbase.py  ctrlparams.md  ctrlparams.py  ctrlsys.py  emf_patch.py  find_eqpt.py  find_tuning.py  fopdt.py  mermaid_diagram.py  mermaid_renderer.py  plant.py  plotutils.py  simsys.py  spsys.py  stepinfo.py  stsys.py
outputs/data/: summary.csv  validation_summary.csv
outputs/data/step_test_data/FIC-100/HYSYS/: FIC_100_setpoint.CSV
outputs/data/step_test_data/FIC-100/Python/: FIC_100_Setpoint.CSV
outputs/data/step_test_data/FIC-101/HYSYS/: FIC_101_setpoint.CSV
outputs/data/step_test_data/FIC-101/Python/: FIC_101_Setpoint.CSV
outputs/data/step_test_data/FIC-102/HYSYS/: FIC_102_setpoint.CSV
outputs/data/step_test_data/FIC-102/Python/: FIC_102_Setpoint.CSV
outputs/data/step_test_data/LIC-100/: README.md
outputs/data/step_test_data/TIC-100/: README.md
outputs/reports/: find_eqpt_output.txt  report_summary.txt  summary.txt  validation_metrics.json  validation_summary.txt
simulation/: biodiesel_operating_point.py  closed_loop_simulation.py  dynamic_simulation.py  open_loop_simulation.py
