[project]
name = "modeling-simulation-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "control>=0.10.2",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "ruff>=0.11.13",
    "pre-commit>=4.2.0",
]

# ── Ruff: linting and formatting ──────────────────────────────────────────────
# Replaces: flake8, isort, pyupgrade, flake8-bugbear, flake8-comprehensions
# Docs: https://docs.astral.sh/ruff/

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # allow raising exceptions without from e (used in NiceGUI callbacks)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "engine", "gateway", "models", "systems", "cases"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

# ── Pyright: static type checking ─────────────────────────────────────────────
# Docs: https://microsoft.github.io/pyright/

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.14"
exclude = [
    "**/.venv",
    "**/uv.lock",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]
reportMissingImports = true
reportMissingTypeStubs = false
